--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "4.0.36",
     "@types/mocha": "2.2.41",
     "@types/oauth2-server": "3.0.0",
+    "@types/request": "2.0.3",
     "@types/should": "8.3.0",
     "@types/socket.io": "1.4.29",
     "@types/supertest": "2.0.2",
@@ -45,6 +46,7 @@
     "phantom": "2.1.2",
     "phantomjs": "2.1.7",
     "rc": "1.1.6",
+    "request": "2.81.0",
     "sails": "0.12.3",
     "sails-disk": "0.10.10",
     "sails-mongo": "0.12.0",
