#425 Use the 'invoices-v2' branch for deploying on staging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ deploy on staging:
   environment:
     name: staging
   only:
-    - development
+    - invoices-v2
 
 deploy on production:
   stage: deploy
