--- a/assets/package.json
+++ b/assets/package.json
@@ -19,15 +19,15 @@
   "author": "3angleTECH",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "@angular/upgrade": "~4.0.0",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
+    "@angular/core": "4.4.4",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/platform-browser": "4.4.4",
+    "@angular/platform-browser-dynamic": "4.4.4",
+    "@angular/router": "4.4.4",
+    "@angular/upgrade": "4.4.4",
     "@types/socket.io-client": "1.4.29",
     "animate.css": "3.5.2",
     "bootstrap": "3.3.7",
@@ -40,14 +40,14 @@
     "moment": "2.15.1",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "0.6.12",
-    "reflect-metadata": "0.1.8",
+    "reflect-metadata": "0.1.10",
     "rxjs": "5.0.1",
     "select2": "4.0.2",
     "socket.io-client": "2.0.3",
     "systemjs": "0.19.40",
     "toastr": "2.1.2",
     "underscore": "1.8.3",
-    "zone.js": "0.8.5"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "concurrently": "3.4.0",
