--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/socket.io": "1.4.29",
     "@types/supertest": "2.0.2",
     "async": "1.5.2",
+    "axios": "0.17.1",
     "bcrypt-nodejs": "0.0.3",
     "cloudinary": "1.4.1",
     "cron": "1.1.0",
@@ -64,7 +65,8 @@
     "util": "0.10.3",
     "winston": "2.2.0",
     "winston-mongodb": "1.6.0",
-    "winston-papertrail": "1.0.4"
+    "winston-papertrail": "1.0.4",
+    "xml-js": "1.6.1"
   },
   "scripts": {
     "debug": "node debug app.js",
